[package]
name = "lava_lamp"
version = "0.1.0"
authors = ["kashifulhaque <haque.kashiful7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Tutorial link: https://youtu.be/6erSNPToziw

[dependencies]
piston_window = "0.110.0"
rand = "0.6.5"
